; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_editor.c_get_font_size.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_editor.c_get_font_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DOCUMENT_NODE = common dso_local global i64 0, align 8
@ELEMENT_NODE = common dso_local global i64 0, align 8
@IID_nsIDOMHTMLElement = common dso_local global i32 0, align 4
@fontW = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"found font tag %p\0A\00", align 1
@sizeW = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [15 x i8] c"found size %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64*)* @get_font_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_font_size(i32* %0, i64* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i64*, align 8
  store i32* %0, i32** %3, align 8
  store i64* %1, i64** %4, align 8
  %15 = load i32*, i32** %3, align 8
  %16 = call i32* @get_ns_selection(i32* %15)
  store i32* %16, i32** %5, align 8
  store i32* null, i32** %6, align 8
  store i32* null, i32** %7, align 8
  %17 = load i64*, i64** %4, align 8
  store i64 0, i64* %17, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %21, label %20

20:                                               ; preds = %2
  br label %95

21:                                               ; preds = %2
  %22 = load i32*, i32** %5, align 8
  %23 = call i32 @nsISelection_GetFocusNode(i32* %22, i32** %7)
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @nsISelection_Release(i32* %24)
  br label %26

26:                                               ; preds = %83, %21
  %27 = load i32*, i32** %7, align 8
  %28 = icmp ne i32* %27, null
  br i1 %28, label %29, label %89

29:                                               ; preds = %26
  %30 = load i32*, i32** %7, align 8
  %31 = call i32 @nsIDOMNode_GetNodeType(i32* %30, i64* %11)
  store i32 %31, i32* %12, align 4
  %32 = load i32, i32* %12, align 4
  %33 = call i64 @NS_FAILED(i32 %32)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %39, label %35

35:                                               ; preds = %29
  %36 = load i64, i64* %11, align 8
  %37 = load i64, i64* @DOCUMENT_NODE, align 8
  %38 = icmp eq i64 %36, %37
  br i1 %38, label %39, label %40

39:                                               ; preds = %35, %29
  br label %89

40:                                               ; preds = %35
  %41 = load i64, i64* %11, align 8
  %42 = load i64, i64* @ELEMENT_NODE, align 8
  %43 = icmp eq i64 %41, %42
  br i1 %43, label %44, label %78

44:                                               ; preds = %40
  %45 = load i32*, i32** %7, align 8
  %46 = bitcast i32** %6 to i8**
  %47 = call i32 @nsIDOMNode_QueryInterface(i32* %45, i32* @IID_nsIDOMHTMLElement, i8** %46)
  %48 = call i32 @nsAString_Init(i32* %9, i32* null)
  %49 = load i32*, i32** %6, align 8
  %50 = call i32 @nsIDOMHTMLElement_GetTagName(i32* %49, i32* %9)
  %51 = call i32 @nsAString_GetData(i32* %9, i32* %10)
  %52 = load i32, i32* %10, align 4
  %53 = load i32, i32* @fontW, align 4
  %54 = call i32 @strcmpiW(i32 %52, i32 %53)
  %55 = icmp ne i32 %54, 0
  br i1 %55, label %74, label %56

56:                                               ; preds = %44
  %57 = load i32*, i32** %6, align 8
  %58 = call i32 @TRACE(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32* %57)
  %59 = load i32*, i32** %6, align 8
  %60 = load i32, i32* @sizeW, align 4
  %61 = call i32 @get_elem_attr_value(i32* %59, i32 %60, i32* %13, i64** %14)
  %62 = load i64*, i64** %14, align 8
  %63 = load i64, i64* %62, align 8
  %64 = icmp ne i64 %63, 0
  br i1 %64, label %65, label %72

65:                                               ; preds = %56
  %66 = load i64*, i64** %14, align 8
  %67 = call i32* @debugstr_w(i64* %66)
  %68 = call i32 @TRACE(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i32* %67)
  %69 = load i64*, i64** %4, align 8
  %70 = load i64*, i64** %14, align 8
  %71 = call i32 @strcpyW(i64* %69, i64* %70)
  br label %72

72:                                               ; preds = %65, %56
  %73 = call i32 @nsAString_Finish(i32* %13)
  br label %74

74:                                               ; preds = %72, %44
  %75 = call i32 @nsAString_Finish(i32* %9)
  %76 = load i32*, i32** %6, align 8
  %77 = call i32 @nsIDOMHTMLElement_Release(i32* %76)
  br label %78

78:                                               ; preds = %74, %40
  %79 = load i64*, i64** %4, align 8
  %80 = load i64, i64* %79, align 8
  %81 = icmp ne i64 %80, 0
  br i1 %81, label %82, label %83

82:                                               ; preds = %78
  br label %89

83:                                               ; preds = %78
  %84 = load i32*, i32** %7, align 8
  store i32* %84, i32** %8, align 8
  %85 = load i32*, i32** %7, align 8
  %86 = call i32 @nsIDOMNode_GetParentNode(i32* %85, i32** %7)
  %87 = load i32*, i32** %8, align 8
  %88 = call i32 @nsIDOMNode_Release(i32* %87)
  br label %26

89:                                               ; preds = %82, %39, %26
  %90 = load i32*, i32** %7, align 8
  %91 = icmp ne i32* %90, null
  br i1 %91, label %92, label %95

92:                                               ; preds = %89
  %93 = load i32*, i32** %7, align 8
  %94 = call i32 @nsIDOMNode_Release(i32* %93)
  br label %95

95:                                               ; preds = %20, %92, %89
  ret void
}

declare dso_local i32* @get_ns_selection(i32*) #1

declare dso_local i32 @nsISelection_GetFocusNode(i32*, i32**) #1

declare dso_local i32 @nsISelection_Release(i32*) #1

declare dso_local i32 @nsIDOMNode_GetNodeType(i32*, i64*) #1

declare dso_local i64 @NS_FAILED(i32) #1

declare dso_local i32 @nsIDOMNode_QueryInterface(i32*, i32*, i8**) #1

declare dso_local i32 @nsAString_Init(i32*, i32*) #1

declare dso_local i32 @nsIDOMHTMLElement_GetTagName(i32*, i32*) #1

declare dso_local i32 @nsAString_GetData(i32*, i32*) #1

declare dso_local i32 @strcmpiW(i32, i32) #1

declare dso_local i32 @TRACE(i8*, i32*) #1

declare dso_local i32 @get_elem_attr_value(i32*, i32, i32*, i64**) #1

declare dso_local i32* @debugstr_w(i64*) #1

declare dso_local i32 @strcpyW(i64*, i64*) #1

declare dso_local i32 @nsAString_Finish(i32*) #1

declare dso_local i32 @nsIDOMHTMLElement_Release(i32*) #1

declare dso_local i32 @nsIDOMNode_GetParentNode(i32*, i32**) #1

declare dso_local i32 @nsIDOMNode_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
